# Taskspay

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  HACKATHON_CHECKLIST.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  SUMMARY.md  TASK_8_VERIFICATION.md  TASK_9.2_VERIFICATION.md  XLM_TOKEN_SETUP.md
contract/: Cargo.toml  README.md
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_cannot_release_after_completion.1.json  test_create_and_release_escrow_happy_path.1.json  test_escrow_state_persistence.1.json  test_refund_escrow.1.json  test_unauthorized_release_fails.1.json
frontend/: RELEASE_FUNDS_FEATURE_SUMMARY.md  TASK_10_ACCESSIBILITY_REPORT.md  TASK_10_CHECKPOINT_REPORT.md  TASK_11_VISUAL_POLISH_REPORT.md  TASK_12_MANUAL_TESTING_CHECKLIST.md  TASK_12_QUICK_START.md  TASK_5_VERIFICATION.md  TASK_7_VERIFICATION.md  TASK_8.4_VERIFICATION.md  TASK_9_CHECKPOINT_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  freighter.ts  global.d.ts  index.css  offline.test.ts  offline.ts  openai.ts  stellar.ts  storage.ts  supabase-types.test.ts  supabase.test.ts  supabase.ts  verification.test.ts  verification.ts
scripts/: check-contract-state.sh  check-recent-txs.sh  deploy-test-sac.js  deploy-xlm-token.sh  find-xlm-token.js  fix-escrow-mapping.sql  wrap-native-xlm.sh
supabase/migrations/: 001_create_escrows_table.sql  002_create_work_submissions_table.sql  003_create_delivery_verifications_table.sql  004_add_payment_releases_to_escrows.sql  005_add_on_chain_id_to_escrows.sql  (+6 more)
(+56 files in other folders)
